Fix missing color in footer text

--- a/docs/assets/styles-page.scss
+++ b/docs/assets/styles-page.scss
@@ -23,10 +23,6 @@
     padding: 0;
 }
 
-.layoutfooter, .layoutfooter a {
-    color: #888;
-}
-
 // Page stylings
 
 h1,h2,h3 {
