--- a/docs/assets/styles.css
+++ b/docs/assets/styles.css
@@ -17,6 +17,10 @@ a {
     transition: all 0.2s ease;
 }
 
+.layoutfooter, .layoutfooter a {
+    color: #888;
+}
+
 .cbsitehover {
     height: 100%;
     width: 100%;
